--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
+    "react-collapse": "^5.1.1",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
@@ -45,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-collapse": "^5.0.1",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.22"
