--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@types/node": "^16.11.24",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.26.0",
     "react": "^17.0.2",
     "react-collapse": "^5.1.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -48,6 +51,7 @@
   },
   "devDependencies": {
     "@types/react-collapse": "^5.0.1",
+    "@types/react-slick": "^0.23.8",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.22"
