--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.27.1",
     "react-paginate": "^8.1.2",
+    "react-rater": "^6.0.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-simple-star-rating": "^4.0.5",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.5.5",
