--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.26.0",
+    "cookie": "^0.4.2",
+    "firebase": "^9.6.8",
+    "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-collapse": "^5.1.1",
     "react-dom": "^17.0.2",
@@ -60,6 +64,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.1",
     "@types/react-collapse": "^5.0.1",
     "@types/react-slick": "^0.23.8",
     "autoprefixer": "^10.4.2",
