--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.26.0",
     "cookie": "^0.4.2",
+    "dayjs": "^1.10.8",
     "firebase": "^9.6.8",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
@@ -36,6 +37,7 @@
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.5.5",
+    "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
@@ -67,6 +69,7 @@
     "@types/js-cookie": "^3.0.1",
     "@types/react-collapse": "^5.0.1",
     "@types/react-slick": "^0.23.8",
+    "@types/uniqid": "^5.3.2",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.22"
