--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-share": "^4.4.0",
     "react-simple-star-rating": "^4.0.5",
     "react-slick": "^0.28.1",
+    "react-toastify": "^8.2.0",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.5.5",
     "uniqid": "^5.4.0",
