--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-collapse": "^5.1.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.27.1",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-paginate": "^8.1.2",
     "react-rater": "^6.0.0",
     "react-rating-stars-component": "^2.2.0",
@@ -69,6 +70,7 @@
   "devDependencies": {
     "@types/js-cookie": "^3.0.1",
     "@types/react-collapse": "^5.0.1",
+    "@types/react-lazy-load-image-component": "^1.5.2",
     "@types/react-slick": "^0.23.8",
     "@types/uniqid": "^5.3.2",
     "autoprefixer": "^10.4.2",
